--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
                  <!-- NAVIGATION  -->
-        <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-center">
+        <!-- <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-center">
             <a class="navbar-brand mr-auto" href="#"><img src="/assets/img/logo.png" alt="Hackers Poulette"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,6 +23,29 @@
                     <a class="nav-item nav-link text-white" href="#">Contact</a>
                     <a class="nav-item nav-link text-white" href="#">Search</a>
                     <a class="nav-item nav-link text-white" href="#">Panier</a>
+                </div>
+        </nav> -->
+
+        <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-center">
+                <a class="navbar-brand mr-auto" href="#"><img src="/assets/img/logo.png" alt="Hackers Poulette"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link nav-link text-white" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item nav-link text-white" href="#">Shop</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item nav-link text-white" href="#">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-item nav-link text-white" href="#">Panier</a>
+                        </li>
+                    </ul>
                 </div>
         </nav>
 
