--- a/index.html
+++ b/index.html
@@ -12,22 +12,9 @@
 </head>
 <body>
                  <!-- NAVIGATION  -->
-        <!-- <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-center">
-            <a class="navbar-brand mr-auto" href="#"><img src="/assets/img/logo.png" alt="Hackers Poulette"> </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link text-white active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link text-white" href="#">Shop</a>
-                    <a class="nav-item nav-link text-white" href="#">Contact</a>
-                    <a class="nav-item nav-link text-white" href="#">Search</a>
-                    <a class="nav-item nav-link text-white" href="#">Panier</a>
-                </div>
-        </nav> -->
-
+    
         <nav class="navbar navbar-expand-lg fixed-top d-flex justify-content-center">
-                <a class="navbar-brand mr-auto" href="#"><img src="/assets/img/logo.png" alt="Hackers Poulette"></a>
+                <a class="navbar-brand" href="index.html"><img src="/assets/img/logo.png" alt="Hackers Poulette"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
