--- a/index2.html
+++ b/index2.html
@@ -141,13 +141,43 @@
             <div class="wave">
             </div>
             <div class="maine">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum est corporis odit voluptatem error voluptas molestiae ullam debitis molestias! Non incidunt quam, eius fugit, dignissimos quos delectus placeat voluptatem animi veniam repellat obcaecati
-                ullam quibusdam perferendis, cumque ab! Ea maiores, tempore commodi corrupti minima, at, soluta magni obcaecati suscipit perspiciatis numquam et culpa quae officia ratione optio dolores veniam minus. Quis molestias itaque minus inventore
-                eligendi velit odit, sunt dignissimos assumenda pariatur deleniti quaerat illum. Dignissimos, impedit est. Quae perspiciatis delectus veritatis distinctio, aliquam atque voluptatibus amet placeat cupiditate harum nobis quod. Provident
-                modi nam aperiam, nobis maxime, nesciunt earum expedita enim ad voluptates rerum, nemo tempora! Magnam aspernatur officia, itaque ea omnis modi amet nam excepturi beatae! Porro aperiam enim amet deleniti earum sed laboriosam vitae mollitia
-                beatae nobis laudantium necessitatibus nesciunt fuga velit aut doloribus totam, nihil sequi natus. Delectus dolorum sint officiis modi sequi doloribus est ea corrupti saepe odio tempora provident culpa repellat aut ullam beatae, unde deserunt
-                deleniti non, ut nostrum laudantium! Exercitationem labore repellat quod. Corporis repudiandae eveniet aut, quasi rem dolores neque fuga aliquam, molestias impedit, distinctio est quam numquam. Possimus voluptatum tenetur et odio, nihil
-                ut nobis rem tempore laudantium, nemo exercitationem?
+                <div class="row">
+                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto">
+                        <h3>lorem</h3>
+                        <ul id="list-footer">
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto ">
+                        <h3>lorem</h3>
+                        <ul id="list-footer">
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto">
+                        <h3>Follow Us</h3>
+                        <ul class="d-flex" id="social-media">
+                            <li><img src="" alt="Facebook"></li>
+                            <li><img src="" alt="Twitter"></li>
+                            <li><img src="" alt="Instagram"></li>
+                        </ul>
+                        <h3>Method Payments</h3>
+                        <ul class="d-flex" id="payment">
+                            <li><img src="/assets/img/MasterCard_Logo.png" alt="mastercard"></li>
+                            <li><img src="/assets/img/524px-Old_Visa_Logo.png" alt="visa"></li>
+                            <li><img src="/assets/img/bancontact.png" alt="bancontact"></li>
+                            <li><img src="/assets/img/Paypal_2014_(logo).png" alt="paypal"></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
