add 4 clean repo

--- a/index2.html
+++ b/index2.html
@@ -27,11 +27,11 @@
                 </li>
                 <li class="separator d.none d.md.block">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Catalog</a>
+                    <a class="nav-link" href="catalog.html">Catalog</a>
                 </li>
                 <li class="separator">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="form.html">Contact</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -56,15 +56,11 @@
     <!-- best sellers  -->
     <div class="container-fluid" id="bestSeller">
         <div class="row">
-            <div class="col-12 m-0 p-0">
-                <div class="openSvg">
-                    <svg preserveAspectRatio="none" viewBox="0 0 100 100">
-                        <polygon points="100,15 100,0 -15,15" opacity="1"></polygon>
-                    </svg>
-                </div>
+            <div class="col-12 background">
+
             </div>
         </div>
-        <div class="row">
+        <div class="row titre">
             <div class="col-lg-12">
                 <h3 class="float-right text-primary"><b>OUR 4 BEST SALES</b></h3>
             </div>
@@ -136,49 +132,45 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <!-- footer  -->
+    <div class="row" style="margin-top:-15vh">
         <div class="col-lg-12" id="footer">
             <div class="wave">
             </div>
-            <div class="maine">
-                <div class="row">
-                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto">
-                        <h3>lorem</h3>
-                        <ul id="list-footer">
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto ">
-                        <h3>lorem</h3>
-                        <ul id="list-footer">
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                            <li>Lorem ipsum dolor sit amet.</li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4 d-flex flex-column align-items-center mt-auto mb-auto">
-                        <h3>Follow Us</h3>
-                        <ul class="d-flex" id="social-media">
-                            <li><img src="" alt="Facebook"></li>
-                            <li><img src="" alt="Twitter"></li>
-                            <li><img src="" alt="Instagram"></li>
-                        </ul>
-                        <h3>Method Payments</h3>
-                        <ul class="d-flex" id="payment">
-                            <li><img src="/assets/img/MasterCard_Logo.png" alt="mastercard"></li>
-                            <li><img src="/assets/img/524px-Old_Visa_Logo.png" alt="visa"></li>
-                            <li><img src="/assets/img/bancontact.png" alt="bancontact"></li>
-                            <li><img src="/assets/img/Paypal_2014_(logo).png" alt="paypal"></li>
-                        </ul>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="maine text-center">
+                        <h3>SUBSCRIPT TO OUR NEWSLETTER HERE</h3>
+                        <input type="text" class="newsletter" size=40 name="newMail" id="formNewmail" value="enter your mail here ">
+                        <button class="newsSubscipte">subscribe</button>
+                        <div class="mt-5 row justify-content-center align-content-center">
+                            <a href="#home" class="footerAnchor">Home</a>
+                            <a href="catalog.html" class="footerAnchor">Catalog</a>
+                            <a href="form.html" class="footerAnchor">Contact</a>
+                            <span>Suivez-nous sur</span>
+                            <object type="image/svg+xml" class="ml-2" data="https://image.flaticon.com/icons/svg/145/145802.svg" width="1.5%">
+                                            <!-- fallback here (<img> referencing a PNG version of the graphic, for example) -->
+                                    </object>
+                            <object type="image/svg+xml" class="ml-2" data="https://image.flaticon.com/icons/svg/145/145807.svg" width="1.5%">
+                                        <!-- fallback here (<img> referencing a PNG version of the graphic, for example) -->
+                                    </object>
+                            <object type="image/svg+xml" class="ml-2" data="https://image.flaticon.com/icons/svg/145/145812.svg" width="1.5%">
+                                        <!-- fallback here (<img> referencing a PNG version of the graphic, for example) -->
+                                    </object>
+                            <object type="image/svg+xml" class="ml-2" data="https://image.flaticon.com/icons/svg/355/355992.svg" width="1.5%">
+                                        <!-- fallback here (<img> referencing a PNG version of the graphic, for example) -->
+                                    </object>
+                        </div>
+                        <p class="address mt-3">
+                            Tous les prix sont en euros, TVA en vigueur comprise. - © Copyright 2019 - Hackers poulette | Charlerois 0826.855.031, 6041 Gosselies
+                        </p>
+                        <div class="col-lg-12 text-left">
+                            <img src="https://media.cdnws.com/_i/76280/645/3566/46/moyens-paiement.png" alt="" class="img-fluid bankImage">
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
     <!-- Optional JavaScript -->
