--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <title>Contact</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
+    <meta charset="utf-8" Content-Type= "text/html">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
@@ -76,7 +76,7 @@
                             <option value="Sweden">Sweden</option>
                             <option value="Switzerland">Switzerland</option>
                         </select>
-                        <p id="error" class="good">You had to select one country</p>
+                        <p id="errorCountry" class="good">You had to select one country</p>
                     </div>
                     <div class="col-5">
                             <select id="idGender" name="usGender">
@@ -84,7 +84,7 @@
                                 <option value="man">Man</option>
                                 <option value="woman">Woman</option>
                             </select>
-                            <p id="error" class="good">You had to select your gender</p>
+                            <p id="errorGender" class="good">You had to select your gender</p>
                         </div>
                 </div>
                 <div class="row mt-5">
@@ -98,7 +98,7 @@
                             <option value="2">Commercial Support</option>
                             <option value="3">Other Subject</option>
                         </select>
-                        <p id="error" class="good">You had to choose a subject</p>
+                        <p id="errorSubject" class="good">You had to choose a subject</p>
                     </div>
                     <div class="col-12">
                         <input type="text" class="w-75 mt-1" name="userSubject" id="formMesSubjectElse" value="Enter your subject here">
