--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="separator d.none d.md.block">|</li>
                 <li class="nav-item">
@@ -146,7 +146,7 @@
                         <p class="address mt-3">
                             Tous les prix sont en euros, TVA en vigueur comprise. - © Copyright 2019 - Hackers poulette | Charlerois 0826.855.031, 6041 Gosselies
                         </p>
-                        <div class="col-lg-12">
+                        <div class="col-lg-12 text-left">
                             <img src="https://media.cdnws.com/_i/76280/645/3566/46/moyens-paiement.png" alt="" class="img-fluid bankImage">
                         </div>
                     </div>
