--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
-        <a class="navbar-brand" href="#">Hackers Poulette</a>
+        <a class="navbar-brand" href="#"> <img src="assets/img/logo.png" alt="" width="100px" height="100px"></a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
                 <li class="nav-item active">
@@ -46,8 +46,11 @@
             <div class="col-12">
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <h1 class="display-4">Fluid jumbotron</h1>
-                        <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                        <h1 class="display-4">Hacker Poulette</h1>
+                        <h class="lead">
+                            <h2>Our mission is to put the power of computing and digital making into the hands of people all over the world.</h2>
+
+                            </p>
                     </div>
                 </div>
             </div>
