--- a/catalog.html
+++ b/catalog.html
@@ -22,16 +22,16 @@
         <a class="navbar-brand" href="#">Hackers Poulette</a>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
             <ul class="navbar-nav mr-auto ml-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="separator d.none d.md.block">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="catalog.html">Catalog</a>
+                    <a class="nav-link active" href="catalog.html">Catalog <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="separator">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="form.html">Contact</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
