--- a/catalog.html
+++ b/catalog.html
@@ -11,6 +11,8 @@
     <!-- <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/css/smallscreen.css" type="text/css" />
     <link rel="stylesheet" media="screen and (min-width: 481px) and (max-width:780px)" href="assets/css/middlescreen.css" type="text/css" /> -->
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/css/smallscreen.css" type="text/css" />
+
 </head>
 
 <body>
@@ -25,11 +27,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
-                <li class="separator d.none d.md.block">|</li>
+                <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
                     <a class="nav-link active" href="catalog.html">Catalog <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="separator">|</li>
+                <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
                     <a class="nav-link" href="form.html">Contact</a>
                 </li>
