--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/css/smallscreen.css" type="text/css" />
-    <link rel="stylesheet" media="screen and (min-width: 481px) and (max-width:780px)" href="assets/css/middlescreen.css" type="text/css" /> -->
+    <!-- <link rel="stylesheet" media="screen and (min-width: 481px) and (max-width:780px)" href="assets/css/middlescreen.css" type="text/css" /> -->
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/css/smallscreen.css" type="text/css" />
+
 </head>
 
 <body>
@@ -25,11 +26,11 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="separator d.none d.md.block">|</li>
+                <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
                     <a class="nav-link" href="catalog.html">Catalog</a>
                 </li>
-                <li class="separator">|</li>
+                <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
                     <a class="nav-link" href="form.html">Contact</a>
                 </li>
