--- a/form.html
+++ b/form.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" media="screen and (min-width: 481px) and (max-width:780px)" href="assets/css/middlescreen.css" type="text/css" /> -->
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" media="screen and (max-width: 480px)" href="assets/css/smallscreen.css" type="text/css" />
+
+
 </head>
 
 <body>
