--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </li>
                 <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="form.html">Contact</a>
+                    <a class="nav-link" href="form.php">Contact</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -184,4 +184,4 @@
     <script src="assets/js/bootstrap.min.js "></script>
 </body>
 
-</html
+</html>
