--- a/catalog.html
+++ b/catalog.html
@@ -33,7 +33,7 @@
                 </li>
                 <li class="separator d-none d-md-block">|</li>
                 <li class="nav-item">
-                    <a class="nav-link" href="form.html">Contact</a>
+                    <a class="nav-link" href="form.php">Contact</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
