image + avant pull emile

--- a/catalog.html
+++ b/catalog.html
@@ -57,7 +57,7 @@
                 <div class="card ">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/usb_pi.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This card has supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -65,7 +65,7 @@
                 <div class="card ">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/raspberry_pi_3_B.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -83,7 +83,7 @@
                 <div class="card">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top" alt="... ">
+                        <img src="assets/img/71RJj8SmQGL._SX355_.jpg" class="card-img-top" alt="... ">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -91,7 +91,7 @@
                 <div class="card ">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/s-l400.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This card has supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -99,7 +99,7 @@
                 <div class="card ">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/LD0005121995_2.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
