--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Hackers Poulette</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -83,7 +83,7 @@
 
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/usb_pi.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This card has supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -92,7 +92,7 @@
 
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/raspberry_pi_3_B.jpg" class="card-img-top " alt="... ">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -169,7 +169,7 @@
                             Tous les prix sont en euros, TVA en vigueur comprise. - © Copyright 2019 - Hackers poulette | Charlerois 0826.855.031, 6041 Gosselies
                         </p>
                         <div class="col-lg-12 text-left">
-                            <img src="https://media.cdnws.com/_i/76280/645/3566/46/moyens-paiement.png" alt="" class="img-fluid bankImage">
+                            <img src="https://media.cdnws.com/_i/76280/645/3566/46/moyens-paiement.png" alt="moyens de paiments" class="img-fluid bankImage">
                         </div>
                     </div>
                 </div>
