--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
                         <h1 class="display-4">Hacker Poulette</h1>
-                        <h class="lead">
+                        <h3 class="lead">
                             <h2>Our mission is to put the power of computing and digital making into the hands of people all over the world.</h2>
 
                             </p>
@@ -74,7 +74,7 @@
                 <div class="card">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top" alt="... ">
+                        <img src="assets/img/RASP_03_01.jpg" class="card-img-top" alt="image raspberry">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -83,7 +83,7 @@
 
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/usb_pi.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/usb_pi.jpg" class="card-img-top " alt="image raspberry">
                         <p class="card-text ">This card has supporting text below as a natural lead-in to additional content.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -92,7 +92,7 @@
 
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/raspberry_pi_3_B.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/raspberry_pi_3_B.jpg" class="card-img-top " alt="image raspberry">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
@@ -100,7 +100,7 @@
                 <div class="card ">
                     <div class="card-body ">
                         <h5 class="card-title ">Card title</h5>
-                        <img src="assets/img/RASP_PI_4_B_01_ANW.jpg" class="card-img-top " alt="... ">
+                        <img src="assets/img/RASP_PI_4_B_01_ANW.jpg" class="card-img-top " alt="image raspberry">
                         <p class="card-text ">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                         <a href="#" class="btn btn-primary btn-price">25€</a><a href="#" class="btn btn-primary btn-detail">more details</a>
                     </div>
